# i18n-pseudo

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
homebrew/: i18n-pseudo.rb
npm/: install.js  package.json
src/: cli.rs  lib.rs  main.rs  pseudo.rs
src/strategies/: accents.rs  brackets.rs  cjk.rs  expansion.rs  mod.rs  rtl.rs  special_chars.rs  unicode_stress.rs
tests/: pipeline_tests.rs  strategy_tests.rs
